# neurosync-pro

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.codex/: config.toml
config/: hardware.env.example  hardware_manifest.example.json  toolchain-lock.json
docs/architecture/: raspberry-pi-3-deviation.md  system-architecture.md  trust-boundaries.md
docs/protocol/: protocol-v1.md  state-machine.md
docs/setup/: SETUP-REPORT.md  armoury-setup.md  codex-direct-control.md  esp32-setup.md  manual-actions.md  phase2-40hz.md  pifi-audio.md  raspberry-pi-setup.md  rollback.md  system-audit.md
firmware/esp32/: CMakeLists.txt  sdkconfig.defaults
firmware/esp32/main/: CMakeLists.txt  Kconfig  app_main.c  nsp_board.h  nsp_protocol.c  nsp_protocol.h  nsp_safe_state.c  nsp_serial.c  nsp_serial.h  nsp_state.c  nsp_state.h  nsp_sync.c  nsp_sync.h
firmware/esp32/test/: README.md
hardware/manifests/: raspberry-pi.json
scripts/common/: lib.sh
scripts/doctor/: neurosync-doctor.sh  validate-make-booleans.sh
scripts/esp32/: build.sh  chip-info.sh  detect.sh  flash-monitor.sh  flash.sh  monitor.sh
scripts/pi/: bootstrap.sh  configure-pifi.sh  controller-service.sh  deploy.sh  install-services.sh  inventory.sh  logs.sh  remove-services.sh  shell.sh  status.sh  test.sh  verify-pifi.sh  verify.sh
scripts/windows/: esp32-usb-attach.ps1  esp32-usb-bind.ps1  esp32-usb-detach.ps1  esp32-usb-list.ps1
tests/unit/: test_audio_test_tone.py  test_config.py  test_controller_daemon.py  test_hardware_discovery.py  test_serial_link.py
(+13 files in other folders)
